couple of changes to how the pages are rendered and whatnot.

--- a/pyLaridae/templates/nav.html
+++ b/pyLaridae/templates/nav.html
@@ -1,7 +1,15 @@
 
+{% set navigation_bar = [
+    (url_for('public.home'), 'index', 'Home'),
+    # ('/downloads/', 'downloads', 'Downloads'),
+    (url_for('public.about'), 'about', 'About')
+] -%}
+
+{% set active_page = active_page|default('index') -%}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="{{ url_for('public.home') }}">
-     pyLaridae (Seagull Helper) 
+     pyLaridae
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -9,15 +17,15 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('public.home') }}">Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">About</a>
-      </li>
+    <ul id="navigation" class="navbar-nav mr-auto">
+        {% for href, id, caption in navigation_bar %}
+          <li class="nav-item {% if id == active_page %}active{% endif %}">
+            <a class="nav-link" href="{{ href|e }}">
+              {{ caption|e }}
+              {% if id == active_page %}<span class="sr-only">(current)</span>{% endif %}
+            </a>
+          </li>
+        {% endfor %}
     </ul>
     {% if current_user and current_user.is_authenticated %}
     <ul class="navbar-nav my-auto">
