--- a/pyLaridae/templates/public/about.html
+++ b/pyLaridae/templates/public/about.html
@@ -1,5 +1,6 @@
-
 {% extends "layout.html" %}
+
+{% set active_page = "about" %}
 
 {% block content %}
 <div class="container">
@@ -9,4 +10,3 @@
     </div>
 </div>
 {% endblock %}
-
