--- a/pyLaridae/templates/public/home.html
+++ b/pyLaridae/templates/public/home.html
@@ -1,12 +1,15 @@
 
 {% extends "layout.html" %}
+
+{% set active_page = "index" %}
+
 {% block content %}
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-    
+
       <h1 class="display-3">Welcome to pyLaridae (Seagull Helper)</h1>
-    
+
       <p>This is a starter Flask template. It includes Bootstrap 4, jQuery 3, Flask-SQLAlchemy, WTForms, and various testing utilities out of the box.</p>
       <p><a href="https://github.com/cookiecutter-flask/cookiecutter-flask" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
     </div>
@@ -32,4 +35,3 @@
   </div><!-- /.row -->
 </div>
 {% endblock %}
-
