Added some code and changed up a whole lot of other bits and pieces.

--- a/pyLaridae/templates/nav.html
+++ b/pyLaridae/templates/nav.html
@@ -5,7 +5,7 @@
 ] -%}
 
 {% set logged_in_links = [
-    ('/', 'media', 'Media'),
+    (url_for('file_management.media'), 'media', 'Media'),
     ('/', 'post', 'Posts')
 ] -%}
 
