--- a/pyLaridae/templates/users/members.html
+++ b/pyLaridae/templates/users/members.html
@@ -1,9 +1,10 @@
-
 {% extends "layout.html" %}
-{% block content %}
-    <div class="container">
-        <h1>Welcome {{ current_user.username }}</h1>
-        <h3>This is the members-only page.</h3>
-    </div>
-{% endblock %}
 
+{% set active_page = "users" %}
+
+{% block content %}
+  <div class="container">
+    <h1>Welcome {{ current_user.username }}</h1>
+    <h3>This is the members-only page.</h3>
+  </div>
+{% endblock %}
