Add styling to the folder li items

--- a/pyLaridae/templates/file_management/file_list.html
+++ b/pyLaridae/templates/file_management/file_list.html
@@ -1,4 +1,10 @@
 
+<style media="screen">
+  .folder{
+    background: grey;
+  }
+</style>
+
 <ul>
 {% for file_obj in all_files %}
     {{file_obj.to_html() | safe}}
